# clairvoyant

./: 22.py  README.md  draw_circle_label.py  generate_tfrecord.py  label.py  log  logg  model_circle.py  object_detection.py  tensor.py  tensorflow_log  test.py  trans.py  transs.py  vision.py  xml_to_csv.py
doc/: work.md
doc/DL/: basic-knowledge.md  image_process in deeplearning.md
doc/DL/DETECTION/: detection in deeplearning.md
doc/DL/DETECTION/SSD/: SNPE-CXX-transplant.md  ssd-logic-flow.md  ssd_runtime.md  ssd_test.md  ssd_train.md  ssd_transplant.md  ssd_user_dataset.md
doc/DL/DETECTION/SSD/data/: Makefile.arm-android-gcc4.9  pipeline.config
doc/DL/DETECTION/SSD/pic/: raw_list.txt
doc/DL/DETECTION/YOLO/: test_report.md  yolo-FAQ.md  yolov3_test.md  yolov3_train.md
doc/DL/DETECTION/YOLO/data/: Makefile  config.txt  optic.data  optic_train.txt
doc/DL/denoise/: CBDnet.md  cdncnn.md
doc/FAQ/: android_FAQ.md  liunx_FAQ.md  python_FAQ.md  snpe_FAQ.md  tensorflow_FAQ.md
doc/Guide/: cuda_cudnn_tensorflow_install.md  git.md  jdk_android_install.md  snpe-cplusplus-transplant.md  snpe_install.md
doc/Guide/file/: CMakeLists.txt
doc/tranditonal_image_process/: opencv-liunx.md  zlib png fftw Ubuntu16.04 install.md
doc/tranditonal_image_process/file/: CMakeLists.txt  main.cpp
java/: ClassifyImageWithFloatTensorTask.java  LoadModelsTask.java  LoadNetworkTask.java
scripts/: create_ssd_raws.py  setup_ssd.py  show_ssd_detection.py
